--- a/earthverse.html
+++ b/earthverse.html
@@ -47,9 +47,8 @@
     </header>
     <main>
 
-        <section class="updates" id="events_tryst">
-            <h1>
-                <bi>EARTHVERSE</bi><br><br></h1>
+        <section class="updates" id="events_tryst" style="background-image:url('Figures/mars_river.jpg')" ;>
+            <h1 style="font-weight: 650" ;>EARTHVERSE<br><br></h1>
             <div id="event_tryst">
                 <h2>A keen observer with a profound interest in extra-terrestrial phenomenon ?
                     <br>Tryst'21 brings to you,
@@ -65,7 +64,7 @@
         </section>
 
 
-        <section class="updates" id="details">
+        <section class="updates" id="details" style="background-image:url('Figures/earthverse_bg_2.jpg')" ;>
             <h1>REGISTRATION<br><br></h1><br><br>
             <h2>From the beginning humanity has always looked into the heavens and tried to find its own image. From the genius thinkers who saw images in the stars that no one else could, to modern day Planetary scientists who draw comparisons of other planets
                 with our own blue dot, we’ve made sense of the objects we see in the sky by what we have seen in nature. With EarthVerse we look to continue this trend and ask the participants to look at the images that follow and give back the most apt
@@ -79,8 +78,36 @@
 
         </section>
 
+        <section class="updates" id="events_tryst" style="background-image:url('Figures/sunset.jpg')" ;>
+            <h1>
+                PROBLEM DETAILS<br><br></h1>
+            <div id="event_tryst">
+                <embed src="/assets/EarthverseDOC2.pdf" width="" height="" type="application/pdf">
+            </div>
+            <br><br><br><br>
+        </section>
+
+
+        <section class="updates" id="details" style="min-height:80vh; background-image:url('Figures/mars_2.jpg')" ;>
+            <h1><br><br>SUBMISSION<br></h1><br><br><br><br>
+            <h2>Template for submission can be downloaded from the link below :<br><br></h2><br>
+
+            <div class="title-button">
+                <button><a href="assets/EarthVerse Submission.docx">TEMPLATE FOR SUBMISSION</a></button><br><br><br><br>
+            </div>
+
+            <h2>Participants have to submit their responses by follwoing the sbumission form.<br> The form will be active only till the 29th of April 11:59 PM.
+                <br><br><br></h2><br>
+
+            <div class="title-button">
+                <button><a href="https://docs.google.com/forms/d/e/1FAIpQLScfhht8ZiVChFl2GpRzI5bf8DxSkAFHcugFaikV1LCM2cV_EA/viewform?usp=sf_link">SUBMISSION FORM</a></button>
+            </div><br><br><br><br>
+
+        </section>
+
+
         <section class="updates" id="discussion">
-            <h1>DISCUSSION</h1><br><br>
+            <h1><br><br>DISCUSSION</h1><br><br>
             <div id="disqus_thread">
                 <script>
                     /**
