--- a/earthverse.html
+++ b/earthverse.html
@@ -82,7 +82,7 @@
             <h1>
                 PROBLEM DETAILS<br><br></h1>
             <div id="event_tryst">
-                <iframe src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/pac-iitd/pac-iitd.github.io/raw/main/assets/EarthverseDOC2.pdf#toolbar=0&scrollbar=0" frameBorder="0" scrolling="auto" height="100%" width="100%"></iframe>
+                <iframe src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/pac-iitd/pac-iitd.github.io/raw/main/assets/EarthverseDOC2.pdf#toolbar=0&scrollbar=0" frameBorder="0" scrolling="auto" height="100%" width="100%" style="width:80vw; height:80vh"; ></iframe>
             </div>
             <br><br><br><br>
         </section>
