--- a/tryst21.html
+++ b/tryst21.html
@@ -13,7 +13,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PAC IITD | HOME</title>
+    <title>PAC IITD | TRYST'21</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="Figures/PAC.png" type="image" sizes="48x48" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
