--- a/earthverse.html
+++ b/earthverse.html
@@ -52,7 +52,7 @@
             <div id="event_tryst">
                 <h2>A keen observer with a profound interest in extra-terrestrial phenomenon ?
                     <br>Tryst'21 brings to you,
-                    <marquee direction="right"><b>Earthverse</b></marquee> <br> A long run event wherein you would be required to put your knowledge of extra-terrestrial phenomena along with your apt observation and associative skills to the test. <br><br>
+                    <marquee direction="right" style="color: black";><b>Earthverse</b></marquee> <br> A long run event wherein you would be required to put your knowledge of extra-terrestrial phenomena along with your apt observation and associative skills to the test. <br><br>
                 </h2>
 
                 <div id="earthverse">
@@ -96,7 +96,7 @@
                 <button><a href="assets/EarthVerse Submission.docx">TEMPLATE FOR SUBMISSION</a></button><br><br><br><br>
             </div>
 
-            <h2>Participants have to submit their responses by follwoing the sbumission form.<br> The form will be active only till the 29th of April 11:59 PM.
+            <h2>Participants have to submit their responses through the following sbumission form.<br> The form will be active only till the 29th of April 11:59 PM.
                 <br><br><br></h2><br>
 
             <div class="title-button">
