--- a/earthverse.html
+++ b/earthverse.html
@@ -52,7 +52,7 @@
             <div id="event_tryst">
                 <h2>A keen observer with a profound interest in extra-terrestrial phenomenon ?
                     <br>Tryst'21 brings to you,
-                    <marquee direction="right" style="color: black";><b>Earthverse</b></marquee> <br> A long run event wherein you would be required to put your knowledge of extra-terrestrial phenomena along with your apt observation and associative skills to the test. <br><br>
+                    <marquee direction="right"><b style="color: black";>Earthverse</b></marquee> <br> A long run event wherein you would be required to put your knowledge of extra-terrestrial phenomena along with your apt observation and associative skills to the test. <br><br>
                 </h2>
 
                 <div id="earthverse">
