--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <div id="stars"></div>
         <div id="stars2"></div>
         <div id="stars3"></div>
-        <nav class="bg-black opacity-800">
+        <nav style="background-image: url('Figures/stars.jpg'); background-size: cover;" class="bg-black opacity-800">
             <div class="logo">
                 <img src="Figures/logo_transparent.png" alt="PHYSICS & ASTRONOMY CLUB" />
             </div>
@@ -46,7 +46,7 @@
         <div class="headline" style="height: 0px; weight: 100%"></div>
     </header>
     <!-- Contact us from -->
-    <section style="margin-bottom: 65vh;" class="text-gray-800 pt-20 bg-gray-900 body-font text-xs box-shadow" stylesheet="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css">
+    <section style="margin-bottom: 65vh; background-image: url('Figures/stars.jpg'); background-size: contain;" class="text-gray-800 pt-20 bg-gray-900 body-font text-xs box-shadow" stylesheet="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css">
         <div id="stars"></div>
         <div id="stars2"></div>
         <div id="stars3"></div>
