--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <li><a class="nav-item active" href="index.html">HOME</a></li>
                 <li><a class="nav-item active" href="https://home.iitd.ac.in">IIT DELHI</a></li>
                 <li><a class="nav-item" href="team.html">TEAM</a></li>
-                <li><a class="nav-item" href="tryst21.html">TRYST'21</a></li>
+<!--            <li><a class="nav-item" href="tryst21.html">TRYST'21</a></li>  -->
                 <li><a class="nav-item" href="#">CONTACT US</a></li>
             </ul>
             <div class="burger">
@@ -172,7 +172,7 @@
 						<li><a href="index.html" class="nav-link" id="active">HOME</a></li>
 						<li><a href="https://home.iitd.ac.in" class="nav-link" id="active">IIT DELHI</a></li>
 						<li><a href="team.html" class="nav-link">TEAM</a></li>
-						<li><a href="tryst21.html" class="nav-link">TRYST'21</a></li>
+<!--				    <li><a href="tryst21.html" class="nav-link">TRYST'21</a></li>   -->
 						<li><a href="#" class="nav-link">CONTACT US</a></li>
 					</ul>
 				</div>
