--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
                 <li><a class="nav-item active" href="index.html" style="text-decoration: none; color: #fff;">HOME</a></li>
                 <li><a class="nav-item active" href="https://home.iitd.ac.in" style="text-decoration: none;color: #fff;">IIT DELHI</a></li>
                 <li><a class="nav-item" href="team.html" style="text-decoration: none; color: #fff;">TEAM</a></li>
-                <li><a class="nav-item" href="tryst21.html" style="text-decoration: none;color: #fff;">TRYST'21</a></li>
+<!--            <li><a class="nav-item" href="tryst21.html" style="text-decoration: none;color: #fff;">TRYST'21</a></li>   -->
                 <li><a class="nav-item" href="contact.html" style="text-decoration: none;color: #fff;">CONTACT US</a></li>
             </ul>
             <div class="burger">
@@ -471,7 +471,7 @@
                   <li><a href="index.html" class="nav-link" id="active">HOME</a></li>
                     <li><a href="https://home.iitd.ac.in" class="nav-link" id="active">IIT DELHI</a></li>
                     <li><a href="#" class="nav-link">TEAM</a></li>
-                    <li><a href="tryst21.html" class="nav-link">TRYST'21</a></li>
+<!--                <li><a href="tryst21.html" class="nav-link">TRYST'21</a></li> -->
                     <li><a href="contact.html" class="nav-link">CONTACT US</a></li>
                 </ul>
             </div>
