--- a/team.html
+++ b/team.html
@@ -75,77 +75,53 @@
             Meet the Team!
         </h1>
 
-        <div class="container grid mx-auto grid-cols-1 lg:grid-cols-9 gap-8 pb-10 pl-10 pr-10">
-            <div class=" lg:col-span-2" draggable="true"></div>
-            <div class=" lg:col-span-5" draggable="true">
+        <div class="container grid mx-auto grid-cols-1 lg:grid-cols-12 gap-8 pb-10 pl-10 pr-10">
+            <div class=" lg:col-span-3" draggable="true"></div>
+            <div class=" lg:col-span-6" draggable="true">
                 <div class="person_card lg: rounded-lg lg:rounded-lg shadow-2xl">
-                    <div class="text-center pt-10 pt-20">
-                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center abhinav_disp_pic"></div>
-
-                        <h1 class="text-3xl font-bold pt-5">Abhinav Singh</h1>
-
-                        <h2 class="text-2xl pb-3">Overall Coordinator</h2>
-                    </div>
-                </div>
-            </div>
-            <div class=" lg:col-span-2" draggable="true"></div>
-
-            <div class=" lg:col-span-3" draggable="true">
-                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
-                    <div class="text-center pt-10 pt-20">
-                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center sanaz_disp_pic"></div>
-
-                        <h1 class="text-3xl font-bold pt-5">Sanaz</h1>
-
-                        <h2 class="text-2xl pb-3">Research Coordinator</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class=" lg:col-span-3" draggable="true">
-                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
-                    <div class="text-center pt-10 pt-20">
-                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center pranjal_disp_pic"></div>
-
-                        <h1 class="text-3xl font-bold pt-5">Pranjal</h1>
-
-                        <h2 class="text-2xl pb-3">Research Coordinator</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class=" lg:col-span-3" draggable="true">
-                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
-                    <div class="text-center pt-10 pt-20">
-                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center pushpit_disp_pic"></div>
-
-                        <h1 class="text-3xl font-bold pt-5">Pushpit</h1>
-
-                        <h2 class="text-2xl pb-3">Event Coordinator</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class=" lg:col-span-3" draggable="true">
-                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
-                    <div class="text-center pt-10 pt-20">
-                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center priyanshi_disp_pic"></div>
-
-                        <h1 class="text-3xl font-bold pt-5">Priyanshi</h1>
-
-                        <h2 class="text-2xl pb-3">Event Coordinator</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class=" lg:col-span-3" draggable="true">
-                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
                     <div class="text-center pt-10 pt-20">
                         <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center nandan_disp_pic"></div>
 
-                        <h1 class="text-3xl font-bold pt-5">Nandan</h1>
+                        <h1 class="text-3xl font-bold pt-5">Nandan I P</h1>
 
-                        <h2 class="text-2xl pb-3">Design Coordinator</h2>
+                        <p class=" pb-3">Overall Coordinator</p>
+                    </div>
+                </div>
+            </div>
+            <div class=" lg:col-span-3" draggable="true"></div>
+
+            <div class=" lg:col-span-4" draggable="true">
+                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
+                    <div class="text-center pt-10 pt-20">
+                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center dhruv_disp_pic"></div>
+
+                        <h1 class="text-3xl font-bold pt-5">Dhruv Kumar Gupta</h1>
+
+                        <p class=" pb-3">Research Coordinator</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" lg:col-span-4" draggable="true">
+                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
+                    <div class="text-center pt-10 pt-20">
+                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center gurusha_disp_pic"></div>
+
+                        <h1 class="text-3xl font-bold pt-5">Gurusha Janeja</h1>
+
+                        <p class=" pb-3">Research Coordinator</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" lg:col-span-4" draggable="true">
+                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
+                    <div class="text-center pt-10 pt-20">
+                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center yashasvi_disp_pic"></div>
+
+                        <h1 class="text-3xl font-bold pt-5">Yashasvi Ghadale</h1>
+
+                        <p class=" pb-3">Research Coordinator</p>
                     </div>
                 </div>
             </div>
@@ -153,11 +129,47 @@
             <div class=" lg:col-span-3" draggable="true">
                 <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
                     <div class="text-center pt-10 pt-20">
-                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center prabhpreet_disp_pic"></div>
+                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center meenal_disp_pic"></div>
 
-                        <h1 class="text-3xl font-bold pt-5">Prabhpreet</h1>
+                        <h1 class="text-3xl font-bold pt-5">Meenal Sharma</h1>
 
-                        <h2 class="text-2xl pb-3">Design Coordinator</h2>
+                        <p class=" pb-3">Events & Publicity Coordinator</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" lg:col-span-3" draggable="true">
+                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
+                    <div class="text-center pt-10 pt-20">
+                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center yashvardhan_disp_pic"></div>
+
+                        <h1 class="text-3xl font-bold pt-5">Yashvardhan</h1>
+
+                        <p class=" pb-3">Events & Publicity Coordinator</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" lg:col-span-3" draggable="true">
+                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
+                    <div class="text-center pt-10 pt-20">
+                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center mustafa_disp_pic"></div>
+
+                        <h1 class="text-3xl font-bold pt-5">Mustafa Chasmai</h1>
+
+                        <p class=" pb-3">Website Coordinator</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" lg:col-span-3" draggable="true">
+                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl person_card">
+                    <div class="text-center pt-10 pt-20">
+                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center opal_disp_pic"></div>
+
+                        <h1 class="text-3xl font-bold pt-5">Opal Harinkhere</h1>
+
+                        <p class=" pb-3">Social Media & Design Coordinator</p>
                     </div>
                 </div>
             </div>
