add missing member

--- a/team.html
+++ b/team.html
@@ -424,7 +424,23 @@
                     </div>
                     <div class="carousel-item">
                         <div class="container grid mx-auto grid-cols-1 lg:grid-cols-12 gap-4 pb-10 pt-10 pl-10 pr-10">
-                            <div class=" lg:col-span-6" draggable="true">
+                            
+                            <div class=" lg:col-span-3" draggable="true">
+                                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl">
+                                </div>
+                            </div>
+
+                            <div class=" lg:col-span-3" draggable="true">
+                                <div class="person_card lg: rounded-lg lg:rounded-lg shadow-2xl">
+                                    <div class="text-center pt-10 pt-20">
+                                        <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center saptarshi_disp_pic"></div>
+
+                                        <h1 class="text-3xl font-bold pt-5 pb-5">Saptarshi</h1>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class=" lg:col-span-3" draggable="true">
                                 <div class="person_card lg: rounded-lg lg:rounded-lg shadow-2xl">
                                     <div class="text-center pt-10 pt-20">
                                         <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center shradha_disp_pic"></div>
@@ -434,7 +450,12 @@
                                 </div>
                             </div>
 
-                            <div class=" lg:col-span-6" draggable="true">
+                            <div class=" lg:col-span-3" draggable="true">
+                                <div class="lg: rounded-lg lg:rounded-lg shadow-2xl">
+                                </div>
+                            </div>
+
+                            <div class=" lg:col-span-4" draggable="true">
                                 <div class="person_card lg: rounded-lg lg:rounded-lg shadow-2xl">
                                     <div class="text-center pt-10 pt-20">
                                         <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center soutrik_disp_pic"></div>
@@ -444,7 +465,7 @@
                                 </div>
                             </div>
 
-                            <div class=" lg:col-span-6" draggable="true">
+                            <div class=" lg:col-span-4" draggable="true">
                                 <div class="person_card lg: rounded-lg lg:rounded-lg shadow-2xl">
                                     <div class="text-center pt-10 pt-20">
                                         <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center sujal_disp_pic"></div>
@@ -454,7 +475,7 @@
                                 </div>
                             </div>
 
-                            <div class=" lg:col-span-6" draggable="true">
+                            <div class=" lg:col-span-4" draggable="true">
                                 <div class="person_card lg: rounded-lg lg:rounded-lg shadow-2xl">
                                     <div class="text-center pt-10 pt-20">
                                         <div class="flex block lg: rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover opacity-100 bg-center sukanya_disp_pic"></div>
