--- a/team.html
+++ b/team.html
@@ -8,6 +8,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="shortcut icon" href="Figures/PAC.png" type="image" sizes="48x48" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/team.css" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
