--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="blg h1 text-center">Blogs</div>
           <!-- Card Start -->
           <div class="card">
-            <div class="row">
+            <div class="row blg-row">
               <div class="col-md-7 px-3">
                 <div class="card-block px-6">
                   <h4 class="card-title"></h4>
@@ -144,14 +144,7 @@
                     class="mt-auto btn btn-primary"
                     >Go to blogs</a
                   >
-                  <br>
-                  <br>
-                  <p class="bltext">To know more or contribute</p> 
                   
-                  <a href="contact.html"
-                    class="mt-auto btn btn-primary">
-                    Contact Us
-                  </a>
                 </div>
               </div>
               <!-- Carousel start -->
