--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
           <br>
           <div class="blg h1 text-center">Blogs</div>
           <!-- Card Start -->
-          <div class="card">
+          <div class="card card_blog">
             <div class="row blg-row">
               <div class="col-md-7 px-3">
-                <div class="card-block px-6">
+                <div class="card_blog-block px-6">
                   <h4 class="card-title"></h4>
                   <p class="card-text bltext">
                     Articles on different topics in Physics and Astronomy written by the 
