update new logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="shortcut icon"
-      href="Figures/PAC.png"
+      href="Figures/logo.jpeg"
       type="image"
       sizes="48x48"
     />
