--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>PAC IITD | TEAM</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="Figures/PAC.png" type="image" sizes="48x48" />
+    <link rel="shortcut icon" href="Figures/logo.jpeg" type="image" sizes="48x48" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/team.css" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
