--- a/earthverse.html
+++ b/earthverse.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PAC IITD | EARTHVERSE</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="Figures/PAC.png" type="image" sizes="48x48" />
+    <link rel="shortcut icon" href="Figures/logo.jpeg" type="image" sizes="48x48" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;800&display=swap" />
