add upcoming events section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,49 @@
             <c>MARTIAN SCENERY CAPTURED BY CURIOSITY: NASA/JPL-CALTECH/MSSS</c>
         </section> -->
 
+
+
+        <section class="up_events">
+          <section class="up_events_cover">
+            <div
+              class="container grid grid-cols-1 lg:grid-cols-6"
+              style="min-height: 100%; min-width: 100%; padding: 0px;"
+            >
+              <div class="lg:col-span-6">
+                <h1 >Upcoming Events</h1>
+              </div>
+            </div>
+            <div
+              class="container grid grid-cols-1 lg:grid-cols-12"
+              style="min-height: 100%; min-width: 100%; padding: 20px;  margin-top: 3vh;"
+            >
+              <div class="lg:col-span-1"></div>
+              <div class="lg:col-span-4">
+                <div class="card cur_event">
+                    <img class="card-img-top" src="Figures/events/1.png" alt="Card image">
+                </div>
+              </div>
+              <div class="lg:col-span-1"></div>
+              <div class="lg:col-span-6 event_details">
+                <p style="font-size: 45px; text-align: left;">Computational Astronomy</p>
+                <!-- <p style="font-size: 35px; text-align: left;">Workshop Plan</p> -->
+                <!-- <p style="text-align: left;"></p> -->
+                <ul style="list-style-image: url('Figures/events/tick.png'); margin-left: 40px; margin-top: 20px;">
+                  <li>Introduction to Computational Astronomy</li>
+                  <li>Libraries for Astronomy <br>
+                    (Astropy, Scipy, Matplotlib, Pandas)</li>
+                  <li>Code - Manipulating FITS files</li>
+                  <li>Code - Detecting Hidden Pulsars</li>
+                </ul>
+              </div>
+            </div>
+          </section>
+        </section>
+
+        
+
+
+
       <section class="Blogs">
         <div class="container py-3">
           <br>
