--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
               </div>
               <div class="lg:col-span-1"></div>
-              <div class="lg:col-span-6 event_details">
+              <div class="lg:col-span-5 event_details">
                 <p style="font-size: 45px; text-align: left;">Computational Astronomy</p>
                 <!-- <p style="font-size: 35px; text-align: left;">Workshop Plan</p> -->
                 <!-- <p style="text-align: left;"></p> -->
@@ -154,6 +154,37 @@
                   <li>Code - Manipulating FITS files</li>
                   <li>Code - Detecting Hidden Pulsars</li>
                 </ul>
+                <div
+                  class="flex flex-nowrap"
+                  style=" padding: 10px;  margin-top: 5vh;"
+                >
+                    <div class="lg:col-span-3">
+                        <div class="card timer-card" style="padding: 1px;">
+                          <p id="days">30</p>
+                          <p class="timer-card-caption">days</p>
+                        </div>
+                    </div>
+                    <div class="lg:col-span-3">
+                      <div class="card timer-card" style="padding: 1px;">
+                        <p id="hours">30</p>
+                        <p class="timer-card-caption">hours</p>
+                      </div>
+                    </div>
+                    <div class="lg:col-span-3">
+                      <div class="card timer-card" style="padding: 1px;">
+                        <p id="minutes">30</p>
+                        <p class="timer-card-caption">minutes</p>
+                      </div>
+                    </div>
+                    <div class="lg:col-span-3">
+                      <div class="card timer-card" style="padding: 1px;">
+                        <p id="seconds">30</p>
+                        <p class="timer-card-caption">seconds</p>
+                      </div>
+                    </div>
+
+                </div>
+                <div class="lg:col-span-1"></div>
               </div>
             </div>
           </section>
@@ -955,6 +986,7 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <script src="js/show-on-scroll.js"></script>
+    <script src="js/timer.js"></script>
     <!-- <script src="js/index.js"></script> -->
     <script src="js/scroll.js"></script>
     <script
