finish up current events

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
 
         <section class="up_events">
           <section class="up_events_cover">
+            <div class="button animate-right show-on-scroll">
+                <a href="https://forms.gle/Kcvz7uGJacNQbgwj6" style="text-decoration: none; color: white;">Register Now!<br>(IITD students)</a>
+            </div>
+
             <div
               class="container grid grid-cols-1 lg:grid-cols-6"
               style="min-height: 100%; min-width: 100%; padding: 0px;"
@@ -138,8 +142,8 @@
             >
               <div class="lg:col-span-1"></div>
               <div class="lg:col-span-4">
-                <div class="card cur_event">
-                    <img class="card-img-top" src="Figures/events/1.png" alt="Card image">
+                <div>
+                    <img class="card-img-top cur_event" src="Figures/events/1.jpg" alt="Card image" style="z-index: 1000;">
                 </div>
               </div>
               <div class="lg:col-span-1"></div>
