add responsiveness to events sec

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </div>
               <div class="lg:col-span-1"></div>
               <div class="lg:col-span-5 event_details">
-                <p style="font-size: 45px; text-align: left;">Computational Astronomy</p>
+                <p class="title">Computational Astronomy</p>
                 <!-- <p style="font-size: 35px; text-align: left;">Workshop Plan</p> -->
                 <!-- <p style="text-align: left;"></p> -->
                 <ul style="list-style-image: url('Figures/events/tick.png'); margin-left: 40px; margin-top: 20px;">
