update event navigo physics

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <section class="up_events">
           <section class="up_events_cover">
             <div class="button animate-right show-on-scroll">
-                <a href="https://forms.gle/Kcvz7uGJacNQbgwj6" style="text-decoration: none; color: white;">Register Now!<br>(IITD students)</a>
+                <a href="https://forms.gle/33HfXgYWvH1P7Es36" style="text-decoration: none; color: white;">Register Now!<br>(IITD students)</a>
             </div>
 
             <div
@@ -143,20 +143,18 @@
               <div class="lg:col-span-1"></div>
               <div class="lg:col-span-4">
                 <div>
-                    <img class="card-img-top cur_event" src="Figures/events/1.jpg" alt="Card image" style="z-index: 1000;">
+                    <img class="card-img-top cur_event" src="Figures/events/navigo.jpeg" alt="Card image" style="z-index: 1000;">
                 </div>
               </div>
               <div class="lg:col-span-1"></div>
               <div class="lg:col-span-5 event_details">
-                <p class="title">Computational Astronomy</p>
+                <p class="title">Navigo Physics</p>
                 <!-- <p style="font-size: 35px; text-align: left;">Workshop Plan</p> -->
                 <!-- <p style="text-align: left;"></p> -->
                 <ul style="list-style-image: url('Figures/events/tick.png'); margin-left: 40px; margin-top: 20px;">
-                  <li>Introduction to Computational Astronomy</li>
-                  <li>Libraries for Astronomy <br>
-                    (Astropy, Scipy, Matplotlib, Pandas)</li>
-                  <li>Code - Manipulating FITS files</li>
-                  <li>Code - Detecting Hidden Pulsars</li>
+                  <li>A quest into the unknown, where you get to be the "hero" and save everyone with your wit and keen understanding of the universe</li>
+                  <li>Solve some almost impossible riddles</li>
+                  <li>Compete with peers to the top of the leaderboard</li>
                 </ul>
                 <div
                   class="flex flex-nowrap"
